<resources>
    <string name="app_name">EVC02</string>
    <string name="valbtnregistro">Registro</string>
    <string name="valbtnformulario">Formulario</string>
    <string name="valbtnlistado">Listado</string>
    <string name="tituloinformacion">INFORMACIÓN</string>
    <string name="seleccionar">Seleccione Programas que domine:</string>
    <string name="color">Seleccione su color favorito:</string>
    <string name="titulocuestionario">"CUESTIONARIO COVID-19 "</string>
    <string name="marcar">1. Marca tus síntomas.</string>
    <string name="fiebre">2.¿Tienes fiebre mayor a 37 grados?</string>
    <string name="casa">3.¿Vives solo en casa?</string>
    <string name="adulto">4.¿Vives con un adulto mayor en casa?</string>
    <string name="servicios">5.¿Cuentas con los siguientes servicios en casa?</string>
    <string name="valetnombre">Nombre</string>
    <string name="valetapellidos">Apellidos</string>
    <string name="valetdni">DNI</string>
    <string name="valetcelular">Celular</string>
    <string name="valetemail">Email</string>
    <string name="valrbazul">"Azul "</string>
    <string name="valrbrojo">Rojo</string>
    <string name="valrbverde">Verde</string>
    <string name="valrbotro">Otro</string>
    <string name="valetingrese">Ingrese otro programa</string>
    <string name="valcbsqlserver">MS SQL Server</string>
    <string name="valcbstudiocode">VStudioCode</string>
    <string name="valcbandroidstudio">"Android Studio "</string>
    <string name="valcbotro">Otro</string>
    <string name="valbtnacceder">Acceder</string>
    <string name="valcbgusto">"Disminución del gusto o del olfato "</string>
    <string name="valcbtos">Tos</string>
    <string name="valcbgarganta">"Dolor de garganta "</string>
    <string name="valcbnasal">"Congestión nasal "</string>
    <string name="asdf" />
    <string name="sefeeee">Fiebre</string>
    <string name="valcbfiebre">Fiebre</string>
    <string name="valcbninguno">Ninguno</string>
    <string name="valcbluz">Luz</string>
    <string name="valcbagua">Agua</string>
    <string name="valcbinternet">Internet</string>
    <string name="valcbcable">Cable</string>
    <string name="valbtnresolver">Resolver</string>
    <string name="valrbsi">SI</string>
    <string name="valrbno">NO</string>
    <string name="valrbsi1">SI</string>
    <string name="valrbno1">NO</string>
    <string name="valrbsi2">SI</string>
    <string name="valrbno2">NO</string>
    <string name="valetotrocolor">Ingrese otro color</string>
    <string name="tituloConciertos">Conciertos</string>
</resources>