<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuestionarioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titulocuestionario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/marcar"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fiebre"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioGroup
        android:id="@+id/rggrados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rbsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbsi" />

        <RadioButton
            android:id="@+id/rbno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbno" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/casa"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/rggrados" />

    <RadioGroup
        android:id="@+id/rgvivir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/rbsi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbsi1" />

        <RadioButton
            android:id="@+id/rbno1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbno1" />
    </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/adulto"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/rgvivir" />

    <RadioGroup
        android:id="@+id/rgmayor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/rbsi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbsi2" />

        <RadioButton
            android:id="@+id/rbno2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbno2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/servicios"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/rgmayor" />

        <Button
            android:id="@+id/btnresolver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/valbtnresolver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <CheckBox
            android:id="@+id/cbgusto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valcbgusto" />

        <CheckBox
            android:id="@+id/cbtos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valcbtos" />

        <CheckBox
            android:id="@+id/cbgarganta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valcbgarganta" />

        <CheckBox
            android:id="@+id/cbnasal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valcbnasal" />

        <CheckBox
            android:id="@+id/cbfiebre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valcbfiebre" />

        <CheckBox
            android:id="@+id/cbninguno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valcbninguno" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <CheckBox
                android:id="@+id/cbluz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valcbluz" />

            <CheckBox
                android:id="@+id/cbagua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valcbagua" />

            <CheckBox
                android:id="@+id/cbinternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valcbinternet" />

            <CheckBox
                android:id="@+id/cbcable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valcbcable" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>